@startuml

title __TPJAVA3DAEROPORT's Class Diagram__\n

  namespace  {
    class Aeroport {
    }
  }
  

  namespace  {
    class Earth {
    }
  }
  

  namespace  {
    class Flight {
    }
  }
  

  namespace  {
    class Interface {
    }
  }
  

  namespace  {
    class JsonFlightFillerOracle {
    }
  }
  

  namespace  {
    class World {
    }
  }
  

  Earth -up-|> javafx.scene.Group
  Flight o-- Aeroport : arrival
  Flight o-- Aeroport : departure
  Interface -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
